# hpc-labbook

./: .pre-commit-config.yaml  pyproject.toml
src/cse_labbook/: __init__.py  cli.py  cli_tools.py  jobspec.py  project.py
src/cse_labbook/aiida/: __init__.py  calcjob.py  data.py  future.py  graph.py  tools.py
src/hpclb/: __init__.py  cli.py  cli_tools.py  jobspec.py  project.py
src/hpclb/aiida/: __init__.py  calcjob.py  data.py  future.py  graph.py
src/hpclb/aiida/data/: __init__.py  components.py  dataspec.py  jobgraph.py  jobspec.py  jsonable.py
src/hpclb/cli/: __init__.py  app.py  comms.py  init_cmd.py  jobs_cmd.py  params.py  run_generic_cmd.py  userdata.py
src/hpclb/cli/cscs/: __init__.py  add_cscs_cmd.py  auth_cscs_cmd.py  constants.py
src/hpclb/cli/f7ttest/: __init__.py  add_f7ttest_cmd.py  auth_f7ttest_cmd.py  constants.py
src/hpclb/tui/: __init__.py  process_explorer.py  process_table.py
tests/: conftest.py  test_jobspec.py
tests/data/: dummy.sh
tests/test_aiida/: test_calcjob.py  test_data.py  test_graph.py
tests/test_cli/: conftest.py  test_add_site.py  test_auth_site.py  test_init.py
