[project]
name = "cse-labbook"
version = "0.1.0"
description = "A labbook for all who run exploratory simulation experiments on HPC clusters."
readme = "README.md"
authors = [
    { name = "Rico Häuselmann", email = "rico.haeuselmann@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0.2",
    "textual",
    "typer>=0.17.3",
]

[project.scripts]
hpclb = "cse_labbook.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
executionEnvironments = [{root = "src"}]
venv = "types"
venvPath = ".venv"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "ERA", "ANN", "S", "BLE", "C4", "ICN", "PT", "Q", "RSE", "RET", "SIM", "TID", "TD", "ARG", "PTH", "FLY", "I", "C90", "N", "PERF", "D", "RUF", "TRY", "FURB"]
ignore = ["D203", "D212"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.uv]
dev-dependencies = [
    "ipython>=9.5.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[tool.uv.workspace]
members = [
    "test",
    "../test",
]
